# tools

./: .gitignore  Cargo.toml  dist-workspace.toml
.github/workflows/: release.yml  test.yml
lex-babel/: Cargo.toml  README.lex
lex-babel/css/: baseline.css
lex-babel/css/themes/: theme-fancy-serif.css  theme-modern.css
lex-babel/proptest-regressions/: round_trip_proptest.txt
lex-babel/src/: error.rs  format.rs  lib.rs  publish.rs  registry.rs  transforms.rs
lex-babel/src/common/: flat_to_nested.rs  links.rs  mod.rs  nested_to_flat.rs
lex-babel/src/common/verbatim/: media.rs  mod.rs  table.rs
lex-babel/src/formats/: icons.rs  mod.rs
lex-babel/src/formats/common/: mod.rs
lex-babel/src/formats/html/: mod.rs  serializer.rs
lex-babel/src/formats/lex/: formatting_rules.rs  mod.rs  serializer.rs
lex-babel/src/formats/linetreeviz/: mod.rs
lex-babel/src/formats/markdown/: mod.rs  parser.rs  serializer.rs
lex-babel/src/formats/nodemap/: mod.rs
lex-babel/src/formats/pandoc/: mod.rs
lex-babel/src/formats/pdf/: mod.rs
lex-babel/src/formats/png/: mod.rs
lex-babel/src/formats/rfc_xml/: mod.rs  parser.rs
lex-babel/src/formats/tag/: mod.rs
lex-babel/src/formats/treeviz/: mod.rs
lex-babel/src/ir/: events.rs  from_lex.rs  mod.rs  nodes.rs  to_events.rs  to_lex.rs
lex-babel/src/templates/: asset.rs  mod.rs  util.rs  verbatim.rs
lex-babel/tests/: lib.rs  pdf.rs  round_trip_proptest.rs
lex-babel/tests/common/: mod.rs
lex-babel/tests/fixtures/: kitchensink.lex  markdown-fixes.lex  markdown-fixes.md  markdown-reference-commonmark.md  markdown-reference-comrak.md
lex-babel/tests/html/: annotations.rs  export.rs  mod.rs  table.rs
lex-babel/tests/html/snapshots/: lib__html__export__kitchensink.snap  lib__html__export__trifecta_010_paragraphs_sessions_flat_single.snap  lib__html__export__trifecta_020_paragraphs_sessions_flat_multiple.snap  lib__html__export__trifecta_060_nesting.snap
lex-babel/tests/markdown/: annotations.rs  export.rs  frontmatter.rs  import.rs  mod.rs  sessions.rs  table.rs
lex-babel/tests/markdown/snapshots/: lib__markdown__export__kitchensink_markdown.snap  lib__markdown__import__markdown_import_commonmark_reference.snap  lib__markdown__import__markdown_import_comrak_readme.snap  lib__markdown__import__markdown_import_comrak_reference.snap
lex-babel/tests/rfc_xml/: import.rs
lex-cli/: Cargo.toml  build.rs
lex-cli/completions/: _lex  lex.bash  lex.fish
lex-cli/src/: help.rs  lib.rs  main.rs  transforms.rs
lex-cli/tests/: element_at.rs  format_config.rs  markdown_import.rs  nodemap.rs  pdf.rs  theme_config.rs
lex-config/: Cargo.toml
lex-config/defaults/: lex.default.toml
lex-config/src/: lib.rs
specs/v1/: annot.lex  general.lex  grammar-core.lex  grammar-inline.lex  grammar-line.lex
specs/v1/benchmark/: 010-kitchensink.html  010-kitchensink.lex  010-kitchensink.md  050-lsp-fixture.lex  20-ideas-naked.html  20-ideas-naked.lex  20-ideas-naked.md  30-a-place-for-ideas.html  30-a-place-for-ideas.lex
specs/v1/elements/: XXX-document-simple.lex  XXX-document-tricky.lex  annotation.lex  data.lex  definition.lex  document.lex  inlines.lex  label.lex  list.lex  paragraph.lex  parameter.lex  verbatim.lex
specs/v1/elements/annotation.docs/: annotation-01-flat-marker-simple.lex  annotation-02-flat-marker-with-params.lex  annotation-03-flat-inline-text.lex  annotation-04-flat-inline-with-params.lex  (+17 more)
specs/v1/trifecta/: 000-paragraphs.lex  040-lists.lex  050-paragraph-lists.lex  070-trifecta-flat-simple.lex
(+69 files in other folders)
