[workspace]
members = [
    "lex-babel",
    "lex-config",
    "lex-cli",
]
resolver = "2"

[workspace.dependencies]
lex-core = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
insta = "1.39"

[profile.dist]
inherits = "release"
lto = "thin"
