[package]
name = "lex-babel"
version = "0.2.6"
edition = "2021"
authors = ["lex contributors"]
description = "Format conversion library for the lex format"
license = "MIT"
repository = "https://github.com/lex-fmt/tools"
keywords = ["format", "conversion", "lex", "markdown", "html"]
categories = ["text-processing"]

[lib]
doctest = false

[dependencies]
lex-core = { workspace = true }
comrak = "0.29"
html5ever = "0.35"
markup5ever_rcdom = "0.35"
serde = { workspace = true }
tempfile = "3"
which = "4"
url = "2.4"
pathdiff = "0.2"

[dev-dependencies]
insta = { workspace = true }
once_cell = "1"
regex = "1"
