[package]
name = "lex-config"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["lex contributors"]
description = "Shared configuration loading for the lex toolchain"
repository = "https://github.com/lex-fmt/tools"
keywords = ["config", "lex"]
categories = ["config"]

[dependencies]
config = { workspace = true }
serde = { workspace = true }
lex-babel = { path = "../lex-babel" }
